--- a/연습 copy/css/main.css
+++ b/연습 copy/css/main.css
@@ -36,10 +36,11 @@ a {
 
 .btn.white:hover{
     background-color: #EB5757;
+    color: #fff;
 }
 
 .btn.small{
-    width: 123x;
+    width: 120x;
     height: 36px;
     line-height: 36px;
     font-size: 14px;
@@ -48,6 +49,7 @@ a {
 .btn.filled {
     background-color: #111;
     color: #fff;
+    transition: all 0.s;
 }
 
 .btn:hover{
@@ -181,19 +183,15 @@ body {
 .banner .item .photo {
     position: relative;
     width: 150px;
+    height: 150px;
 }
 
 .banner .item .photo img{
     position: absolute;
     display: block;
     /* width: 150px; */
-    top: -70px;
+    top: 0px;
     left: 0;
-}
-
-.banner .item img {
-    width: 150px;
-    display: block;
 }
 
 .banner .text_box h3{
@@ -253,8 +251,6 @@ body {
     width: 260px;
     height: 260px;
     position: relative;
-    align-items: center;
-    justify-content: center;
     background-color: #f5f5f5;
     cursor: pointer;
 }
@@ -298,7 +294,8 @@ body {
 }
 
 .big_banner .text_box{
-    color: #fff
+    color: #fff;
+    padding-top: 169px;
 }
 
 .big_banner .text_box h2{
@@ -358,12 +355,9 @@ body {
 .footer{
     background-color: #222;
     color: #fff;
+    margin-top: 120px;
     padding-top: 100px;
     padding-bottom: 46px;
-}
-
-.footer .contents{
-    display: flex;
 }
 
 .footer img {
@@ -371,22 +365,68 @@ body {
     display: block;
 }
 
-.f_info{
+.footer .contents{
+    display: flex;
+    margin-bottom: 60px;
+}
+
+.footer_info{
     width: 598px;
-
 }
 
-.f_menu{
-    width: 560px;
+.footer_info .footer_logo img{
+    width: 160px;
+    /* filter: invert(100%); */
 }
 
-.f_info .btns{
+.footer_info .text {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 14px;
+    color: #F5F5F5;
+    line-height: 1.6;
+}
+
+.footer_info .btns {
     display: flex;
     gap: 18px;
 }
 
-.copyright{
-    color: #9d9d9d;
-    font-size:  14px;
+.footer_info .sns {
+    display: flex;
+    font-size: 30px;
+    gap: 20px;
+    margin-top: 35px;
 }
 
+.footer_menu {
+    width: 560px;
+    display: flex;
+    gap: 125px;
+}
+
+.footer_menu > li {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+}
+
+.footer_menu > li > a {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.footer_menu ul {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.footer_menu ul a {
+    color: #F5F5F5;
+}
+
+.copyright {
+    color: #9D9D9D;
+    font-size: 14px;
+}
